[package]
name = "BTC-PriceBot"
version = "0.1.0"
edition = "2021"
[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "builder", "rustls_backend", "http"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
